# mcper

./: .cursorrules.example  .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  HARNESS_ENGINEERING_SUMMARY.md  MEMORY.md  PLANNING_COMPLETE.md  README.md  config.example.yaml  config.local.yaml  main.py  pyproject.toml  requirements.txt
.agents/: archivist.md  coder.md  compounder.md  infra.md  planner.md  pm.md  report_template.md  senior.md  team.sh  team_dashboard.sh  tester.md
.claude/: settings.json
.claude/archivist_notes/: index.md
.github/workflows/: test.yml
app/: __init__.py  config.py  config_merger.py  logging_config.py  main.py  mcp_app.py  mcp_dynamic_mount.py  mcp_tools_docs.py  metrics.py
app/asgi/: __init__.py  csrf_middleware.py  mcp_host_gate.py
app/auth/: __init__.py  context.py  dependencies.py  mcp_oauth_provider.py  oauth.py  permissions.py  router.py  schemas.py  service.py  session_store.py
app/db/: __init__.py  auth_models.py  celery_models.py  database.py  doc_models.py  mcp_security.py  mcp_tool_stats.py  models.py  rag_models.py  rbac_models.py  rule_models.py  seed_defaults.py  seed_specs.py  skill_models.py  workflow_models.py
app/doc/: repository.py  service.py
app/prompts/: app_target_rule.md  branch_context.md  global_rule_bootstrap.md  prompt_loader.py
app/routers/: admin.py  admin_base.py  admin_celery.py  admin_common.py  admin_dashboard.py  admin_docs.py  admin_rbac.py  admin_rules.py  admin_rules_app.py  admin_rules_global.py  admin_rules_repo.py  admin_skills.py  admin_specs.py  admin_tools.py  admin_users.py  admin_workflows.py
app/rule/: repository.py  service.py
app/services/: __init__.py  admin_rules_service.py  celery_client.py  celery_monitoring.py  chunking.py  code_parser.py  code_parser_factory.py  code_parser_javascript.py  code_parser_python.py  document_parser.py  embeddings.py  git.py  health.py  mcp_auto_hosts.py  mcp_host_validate.py  mcp_tool_stats.py  mcp_transport_config.py  rag_health.py  redis_pool.py  rule_cache.py  search_docs.py  search_hybrid.py  search_rules.py  search_skills.py  (+7 more)
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE_MASTER.md  CODE_STYLE.md  COMMIT_GUIDE.md  DEPLOYMENT_GUIDE.md  DESIGN.md  DESIGN_CRITICAL_SECURITY.md  DESIGN_HIGH_REFACTOR.md  DESIGN_SUMMARY.md  DOCSTRING_STYLE.md  FRONTEND.md  LB_DEPLOYMENT.md  LOCAL_EMBEDDING_FALLBACK.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  ROADMAP.md  SECURITY.md  STATUS_AND_ROADMAP_2026Q2.md  TECH_GUIDE.md  audit_2026-04-29.md  deps_audit_2026-04-30.md  dev_log.md  mcp-rules.example.mdc  mcper_next_prompt_v3.md  planning_parallel_execution.md  planning_security_and_refactor.md  planning_wbs.md  project_assessment.md  session_2026-04-29_summary.md  session_2026-04-30_summary.md  vulture_report_2026-04-30.md
infra/: DEPLOYMENT_CHECKLIST.md
scripts/: add_spec_title_column.sql  local_embed_spec.py  migrate_spec_chunks_parent_child.sql  populate_rules_from_docs.py  reindex_all_docs.py  reindex_all_rules.py  reindex_all_skills.py  reindex_all_workflows.py  reset_admin_password.py  seed_adventure_data.py  seed_adventure_from_files.py  seed_harness_docs.py  seed_rules.py  validate_architecture.py  validate_config_startup.py
tests/: conftest.py  test_auth_password_change.py  test_auth_token_expiry.py  test_csrf.py  test_validate_config_startup.py
(+192 files in other folders)
