[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-mcp"
version = "0.1.0"
description = "FastAPI + MCP (SSE) + Postgres spec tools"
readme = "README.md"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths     = ["tests"]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# -m 'not e2e': e2e tests require full-stack env (Redis/Celery/MCPER_AUTH_ENABLED=true).
# Run them explicitly with `pytest -m e2e`.
addopts       = "-v --tb=short -m 'not e2e'"
markers = [
    "integration: tests that exercise the real DB via db_session fixture",
    "e2e: end-to-end tests requiring full-stack env (Redis/Celery/auth enabled)",
]
