[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-mcp"
version = "0.1.0"
description = "FastAPI + MCP (SSE) + Postgres spec tools"
readme = "README.md"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths     = ["tests"]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# -m 'not e2e': e2e tests require full-stack env (Redis/Celery/MCPER_AUTH_ENABLED=true).
# Run them explicitly with `pytest -m e2e`.
addopts       = "-v --tb=short -m 'not e2e'"
markers = [
    "integration: tests that exercise the real DB via db_session fixture",
    "e2e: end-to-end tests requiring full-stack env (Redis/Celery/auth enabled)",
]

[tool.djlint]
profile = "jinja"
indent = 2
max_line_length = 120
# FastAPI+Jinja 환경은 Flask url_for 패턴을 쓰지 않는다. 어드민 UI 는 검색엔진 메타 불필요.
ignore = "J004,J018,H030,H031,H006,H013,H021,H025,T028,T003,H023,H029"
