[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-mcp"
version = "0.1.0"
description = "FastAPI + MCP (SSE) + Postgres spec tools"
readme = "README.md"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths     = ["tests"]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# repo 루트를 import path 에 추가 — `import app.*` 가 PYTHONPATH 설정 없이 동작.
# (CI 에서 `pytest tests/unit/` 단독 실행 시 `ModuleNotFoundError: app` 방지)
pythonpath    = ["."]
# 기본 실행 시 e2e 와 integration 을 제외 — 둘 다 live DB/Redis/Celery 요구.
#   pytest                              → unit 만
#   pytest -m integration                → integration 만
#   pytest -m e2e                        → e2e 만
#   pytest -m ""                         → 전부
addopts       = "-v --tb=short -m 'not e2e and not integration'"
markers = [
    "integration: tests that exercise the real DB via db_session fixture",
    "e2e: end-to-end tests requiring full-stack env (Redis/Celery/auth enabled)",
]

[tool.djlint]
profile = "jinja"
indent = 2
max_line_length = 120
# FastAPI+Jinja 환경은 Flask url_for 패턴을 쓰지 않는다. 어드민 UI 는 검색엔진 메타 불필요.
ignore = "J004,J018,H030,H031,H006,H013,H021,H025,T028,T003,H023,H029"
